<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_item">
    <TextView
        android:id="@+id/txt_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="4dp"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        app:layout_constraintTop_toBottomOf="@id/txt_id"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="4dp"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/txt_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        app:layout_constraintTop_toBottomOf="@id/txt_name"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="4dp"
        android:textColor="@color/black"/>
    <TextView
        android:id="@+id/txt_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        app:layout_constraintTop_toBottomOf="@id/txt_category"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="4dp"
        android:textColor="@color/black"/>
    <View
        android:layout_width="0dp"
        android:layout_height="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_price"
        android:background="@color/black"
        android:elevation="8dp"
        android:layout_marginBottom="4dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>